# advent-of-code

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.zig  build.zig.zon
include/: assertion.h  cpp_solutions.h  registry.h  solutions.h  utils.h
src/: main.cpp  main.zig  registry.cpp  solutions.cpp  utils.cpp
src/ffi/: cpp.zig
src/solutions/2015/: day1.cpp  day2.cpp  day3.cpp  day4.cpp  day5.cpp
